tests/ast_interpreter/err_int_arg_count.expected
<string>:2:11: error: function int expects 1 argument, but 0 were provided
    print(int());
          ^^^^^
